# SoftwareLinebuffer

./: .gitignore  CMakeLists.txt
src/: lb.cpp  lb.h
test/: lb.cpp
